--- a/plugin.xml
+++ b/plugin.xml
@@ -31,67 +31,75 @@
         <engine name="apple-ios" version=">=9.0"/>
 	</engines>
 
-    <!-- ios -->
-    <platform name="ios">
-        <js-module src="src/www/ios/ios-wkwebview-exec.js" name="ios-wkwebview-exec">
-            <clobbers target="cordova.exec"/>
-        </js-module>
+  <platform name="android">
+    <config-file target="config.xml" parent="/*">
+      <preference name="webView" value="com.ionicframework.cordova.webview.IonicWebViewEngine" />
+    </config-file>
+    <source-file src="src/android/com/ionicframework/cordova/webview/IonicWebViewEngine.java" target-dir="src/com/ionicframework/cordova/webview" />
+  </platform>
 
-        <config-file target="config.xml" parent="/*">
-            <allow-navigation href="http://localhost:8080/*"/>
-            <allow-navigation href="http://127.0.0.1:8080/*"/>
-            <feature name="CDVWKWebViewEngine">
-                <param name="ios-package" value="CDVWKWebViewEngine"/>
-            </feature>
-            <preference name="CordovaWebViewEngine" value="CDVWKWebViewEngine"/>
-        </config-file>
 
-        <framework src="WebKit.framework" weak="true"/>
+  <!-- ios -->
+  <platform name="ios">
+    <js-module src="src/www/ios/ios-wkwebview-exec.js" name="ios-wkwebview-exec">
+      <clobbers target="cordova.exec"/>
+    </js-module>
 
-        <header-file src="src/ios/CDVWKWebViewEngine.h"/>
-        <source-file src="src/ios/CDVWKWebViewEngine.m"/>
-        <header-file src="src/ios/CDVWKWebViewUIDelegate.h"/>
-        <source-file src="src/ios/CDVWKWebViewUIDelegate.m"/>
-        <header-file src="src/ios/CDVWKProcessPoolFactory.h"/>
-        <source-file src="src/ios/CDVWKProcessPoolFactory.m"/>
-        <asset src="src/ios/wk-plugin.js" target="wk-plugin.js"/>
+    <config-file target="config.xml" parent="/*">
+        <allow-navigation href="http://localhost:8080/*"/>
+        <allow-navigation href="http://127.0.0.1:8080/*"/>
+        <feature name="CDVWKWebViewEngine">
+            <param name="ios-package" value="CDVWKWebViewEngine"/>
+        </feature>
+        <preference name="CordovaWebViewEngine" value="CDVWKWebViewEngine"/>
+    </config-file>
 
-        <!--GCDWebServer headers-->
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServer.h"/>
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.h"/>
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.h"/>
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerHTTPStatusCodes.h"/>
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerPrivate.h"/>
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.h"/>
-        <header-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.h"/>
-        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.h"/>
-        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.h"/>
-        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.h"/>
-        <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.h"/>
-        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.h"/>
-        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.h"/>
-        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.h"/>
-        <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.h"/>
+    <framework src="WebKit.framework" weak="true"/>
 
-        <!--GCDWebServer source-->
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServer.m"/>
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.m"/>
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.m"/>
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.m"/>
-        <source-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.m"/>
-        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.m"/>
-        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.m"/>
-        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.m"/>
-        <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.m"/>
-        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.m"/>
-        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.m"/>
-        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.m"/>
-        <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.m"/>
+    <header-file src="src/ios/CDVWKWebViewEngine.h"/>
+    <source-file src="src/ios/CDVWKWebViewEngine.m"/>
+    <header-file src="src/ios/CDVWKWebViewUIDelegate.h"/>
+    <source-file src="src/ios/CDVWKWebViewUIDelegate.m"/>
+    <header-file src="src/ios/CDVWKProcessPoolFactory.h"/>
+    <source-file src="src/ios/CDVWKProcessPoolFactory.m"/>
+    <asset src="src/ios/wk-plugin.js" target="wk-plugin.js"/>
 
-        <!--GCDWebServer dependencies-->
-        <framework src="libz.tbd"/>
+    <!--GCDWebServer headers-->
+    <header-file src="src/ios/GCDWebServer/Core/GCDWebServer.h"/>
+    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.h"/>
+    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.h"/>
+    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerHTTPStatusCodes.h"/>
+    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerPrivate.h"/>
+    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.h"/>
+    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.h"/>
+    <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.h"/>
+    <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.h"/>
+    <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.h"/>
+    <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.h"/>
+    <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.h"/>
+    <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.h"/>
+    <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.h"/>
+    <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.h"/>
 
-    </platform>
-    <issue>https://github.com/ionic-team/cordova-plugin-ionic-webview/issues</issue>
-    <author>Ionic Team</author>
+    <!--GCDWebServer source-->
+    <source-file src="src/ios/GCDWebServer/Core/GCDWebServer.m"/>
+    <source-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.m"/>
+    <source-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.m"/>
+    <source-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.m"/>
+    <source-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.m"/>
+    <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.m"/>
+    <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.m"/>
+    <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.m"/>
+    <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.m"/>
+    <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.m"/>
+    <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.m"/>
+    <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.m"/>
+    <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.m"/>
+
+    <!--GCDWebServer dependencies-->
+    <framework src="libz.tbd"/>
+
+  </platform>
+  <issue>https://github.com/ionic-team/cordova-plugin-ionic-webview/issues</issue>
+  <author>Ionic Team</author>
 </plugin>
