--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-ionic-webview",
-  "version": "2.0.3",
+  "version": "2.1.0-0",
   "description": "The official Ionic's WKWebView Engine Plugin",
   "main": "index.js",
   "scripts": {
