chore(ci): run npm before git to persist file changes

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "branch": "stable",
     "plugins": [
       "@semantic-release/changelog",
+      "@semantic-release/npm",
       [
         "@semantic-release/git",
         {
@@ -53,8 +54,7 @@
           ]
         }
       ],
-      "@semantic-release/github",
-      "@semantic-release/npm"
+      "@semantic-release/github"
     ]
   },
   "config": {
