chore(ci): run version in ci

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.0",
+    "@semantic-release/exec": "^3.3.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
     "@semantic-release/npm": "^5.0.4",
@@ -44,6 +45,12 @@
     "plugins": [
       "@semantic-release/changelog",
       "@semantic-release/npm",
+      [
+        "@semantic-release/exec",
+        {
+          "prepareCmd": "npm run version"
+        }
+      ],
       [
         "@semantic-release/git",
         {
