--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.0",
+    "@semantic-release/commit-analyzer": "^6.1.0",
     "@semantic-release/exec": "^3.3.0",
     "@semantic-release/git": "^7.0.4",
     "@semantic-release/github": "^5.0.6",
@@ -42,6 +43,7 @@
   "release": {
     "branch": "stable",
     "plugins": [
+      "@semantic-release/commit-analyzer",
       "@semantic-release/changelog",
       "@semantic-release/npm",
       [
