--- a/plugin.xml
+++ b/plugin.xml
@@ -62,6 +62,7 @@
     <config-file target="config.xml" parent="/*">
         <allow-navigation href="http://localhost:8080/*"/>
         <allow-navigation href="http://127.0.0.1:8080/*"/>
+        <allow-navigation href="ionic://*" />
         <feature name="IonicWebView">
             <param name="ios-package" value="CDVWKWebViewEngine"/>
         </feature>
@@ -76,6 +77,8 @@
     <source-file src="src/ios/CDVWKWebViewUIDelegate.m"/>
     <header-file src="src/ios/CDVWKProcessPoolFactory.h"/>
     <source-file src="src/ios/CDVWKProcessPoolFactory.m"/>
+    <header-file src="src/ios/IONAssetHandler.h"/>
+    <source-file src="src/ios/IONAssetHandler.m"/>
     <asset src="src/ios/wk-plugin.js" target="wk-plugin.js"/>
 
     <!--GCDWebServer headers-->
