--- a/plugin.xml
+++ b/plugin.xml
@@ -28,7 +28,7 @@
 
 	<engines>
         <engine name="cordova-ios" version=">=4.0.0-dev"/>
-        <engine name="apple-ios" version=">=9.0"/>
+        <engine name="apple-ios" version=">=11.0"/>
         <engine name="cordova-android" version=">=6.4.0"/>
 	</engines>
 
@@ -60,9 +60,8 @@
     </js-module>
 
     <config-file target="config.xml" parent="/*">
-        <allow-navigation href="http://localhost:8080/*"/>
-        <allow-navigation href="http://127.0.0.1:8080/*"/>
         <allow-navigation href="ionic://*"/>
+        <preference name="deployment-target" value="11.0" />
         <feature name="IonicWebView">
             <param name="ios-package" value="CDVWKWebViewEngine"/>
         </feature>
@@ -80,42 +79,6 @@
     <header-file src="src/ios/IONAssetHandler.h"/>
     <source-file src="src/ios/IONAssetHandler.m"/>
     <asset src="src/ios/wk-plugin.js" target="wk-plugin.js"/>
-
-    <!--GCDWebServer headers-->
-    <header-file src="src/ios/GCDWebServer/Core/GCDWebServer.h"/>
-    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.h"/>
-    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.h"/>
-    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerHTTPStatusCodes.h"/>
-    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerPrivate.h"/>
-    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.h"/>
-    <header-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.h"/>
-    <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.h"/>
-    <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.h"/>
-    <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.h"/>
-    <header-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.h"/>
-    <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.h"/>
-    <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.h"/>
-    <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.h"/>
-    <header-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.h"/>
-
-    <!--GCDWebServer source-->
-    <source-file src="src/ios/GCDWebServer/Core/GCDWebServer.m"/>
-    <source-file src="src/ios/GCDWebServer/Core/GCDWebServerConnection.m"/>
-    <source-file src="src/ios/GCDWebServer/Core/GCDWebServerFunctions.m"/>
-    <source-file src="src/ios/GCDWebServer/Core/GCDWebServerRequest.m"/>
-    <source-file src="src/ios/GCDWebServer/Core/GCDWebServerResponse.m"/>
-    <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerDataRequest.m"/>
-    <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerFileRequest.m"/>
-    <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerMultiPartFormRequest.m"/>
-    <source-file src="src/ios/GCDWebServer/Requests/GCDWebServerURLEncodedFormRequest.m"/>
-    <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerDataResponse.m"/>
-    <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerErrorResponse.m"/>
-    <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerFileResponse.m"/>
-    <source-file src="src/ios/GCDWebServer/Responses/GCDWebServerStreamedResponse.m"/>
-
-    <!--GCDWebServer dependencies-->
-    <framework src="libz.tbd"/>
-
   </platform>
   <issue>https://github.com/ionic-team/cordova-plugin-ionic-webview/issues</issue>
   <author>Ionic Team</author>
