--- a/plugin.xml
+++ b/plugin.xml
@@ -39,6 +39,8 @@
   <platform name="android">
     <config-file target="config.xml" parent="/*">
       <allow-navigation href="http://localhost/*"/>
+      <allow-navigation href="https://localhost/*"/>
+      <allow-navigation href="ionic://*"/>
       <preference name="webView" value="com.ionicframework.cordova.webview.IonicWebViewEngine"/>
       <feature name="IonicWebView">
           <param name="android-package" value="com.ionicframework.cordova.webview.IonicWebView"/>
